noticed footer not responsive when closing out browser tabs, 3 second fix

--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -11,9 +11,9 @@ footer {
   align-items: center;
   height: 12em;
   background-color: #3f8ca8;
-  position:absolute;
   bottom:0;
   width:100%;
+  margin-bottom: 2em;
 }
 
 h1 {
